--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-md navbar-dark sticky">
   		<a class="navbar-brand" href="#"><img src="https://fanart.tv/api/download.php?type=download&image=12503&section=3" class="navbar-brand"></a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
@@ -45,6 +45,7 @@
     		</form>
   		</div>
 	</nav>
+
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -54,122 +55,110 @@
 		<ul>
 			<li>
 			<div class="card" style="width: 18rem;">
-  				<img src="fast.jpg" class="card-img-top" alt="...">
+  				<img src="./img/1.jpg" class="card-img-top" alt="...">
   				<div class="card-body">
     				<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
 			    	<p class="card-text">Description of the Film.</p>
-			    	<a href="#" class="btn btn-primary">Go somewhere</a>
-  				</div>
+			    	  				</div>
   			</div>
  			</li>
   			<li>
   				<div class="card" style="width: 18rem;">
-				<img src="fast.jpg" class="card-img-top" alt="...">
+				<img src="./img/2.jpg" class="card-img-top" alt="...">
 				 	<div class="card-body">
-				 	<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+				 	<h6 class="card-title"><a href="#">Название фильма</a></h6>
 				 	<p class="card-text">Description of the Film.</p>
-				 	<a href="#" class="btn btn-primary">Go somewhere</a>
-  					</div>
+				 	  					</div>
   				</div>
 			</li>
 			<li>
   				<div class="card" style="width: 18rem;">
-				<img src="fast.jpg" class="card-img-top" alt="...">
+				<img src="./img/3.jpg" class="card-img-top" alt="...">
 				 	<div class="card-body">
-				 	<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+				 	<h6 class="card-title"><a href="#">Название фильма</a></h6>
 				 	<p class="card-text">Description of the Film.</p>
-				 	<a href="#" class="btn btn-primary">Go somewhere</a>
-  					</div>
+				 	  					</div>
   				</div>
 			</li>
 			<li>
   				<div class="card" style="width: 18rem;">
-				<img src="fast.jpg" class="card-img-top" alt="...">
+				<img src="./img/4.jpg" class="card-img-top" alt="...">
 				 	<div class="card-body">
-				 	<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+				 	<h6 class="card-title"><a href="#">Название фильма</a></h6>
 				 	<p class="card-text">Description of the Film.</p>
-				 	<a href="#" class="btn btn-primary">Go somewhere</a>
-  					</div>
+				 	  					</div>
   				</div>
 			</li>
       <li>
           <div class="card" style="width: 18rem;">
-        <img src="fast.jpg" class="card-img-top" alt="...">
+        <img src="./img/5.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-          <h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+          <h6 class="card-title"><a href="#">Название фильма</a></h6>
           <p class="card-text">Description of the Film.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+                      </div>
           </div>
       </li>
       <li>
           <div class="card" style="width: 18rem;">
-        <img src="fast.jpg" class="card-img-top" alt="...">
+        <img src="./img/6.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-          <h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+          <h6 class="card-title"><a href="#">Название фильма</a></h6>
           <p class="card-text">Description of the Film.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+                      </div>
           </div>
       </li>
 			<li>
 			<div class="card" style="width: 18rem;">
-  				<img src="fast.jpg" class="card-img-top" alt="...">
+  				<img src="./img/7.jpg" class="card-img-top" alt="...">
   				<div class="card-body">
-    				<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+    				<h6 class="card-title"><a href="#">Название фильма</a></h6>
 			    	<p class="card-text">Description of the Film.</p>
-			    	<a href="#" class="btn btn-primary">Go somewhere</a>
-  				</div>
+			    	  				</div>
   			</div>
  			</li>
   			<li>
   				<div class="card" style="width: 18rem;">
-				<img src="fast.jpg" class="card-img-top" alt="...">
+				<img src="./img/8.jpg" class="card-img-top" alt="...">
 				 	<div class="card-body">
-				 	<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+				 	<h6 class="card-title"><a href="#">Название фильма</a></h6>
 				 	<p class="card-text">Description of the Film.</p>
-				 	<a href="#" class="btn btn-primary">Go somewhere</a>
-  					</div>
+				 	  					</div>
   				</div>
 			</li>
 			<li>
   				<div class="card" style="width: 18rem;">
-				<img src="fast.jpg" class="card-img-top" alt="...">
+				<img src="./img/9.jpg" class="card-img-top" alt="...">
 				 	<div class="card-body">
-				 	<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+				 	<h6 class="card-title"><a href="#">Название фильма</a></h6>
 				 	<p class="card-text">Description of the Film.</p>
-				 	<a href="#" class="btn btn-primary">Go somewhere</a>
-  					</div>
+				 	  					</div>
   				</div>
 			</li>
 			<li>
   				<div class="card" style="width: 18rem;">
-				<img src="fast.jpg" class="card-img-top" alt="...">
+				<img src="./img/10.jpg" class="card-img-top" alt="...">
 				 	<div class="card-body">
-				 	<h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+				 	<h6 class="card-title"><a href="#">Название фильма</a></h6>
 				 	<p class="card-text">Description of the Film.</p>
-				 	<a href="#" class="btn btn-primary">Go somewhere</a>
-  					</div>
+				 	  					</div>
   				</div>
 			</li>
       <li>
           <div class="card" style="width: 18rem;">
-        <img src="fast.jpg" class="card-img-top" alt="...">
+        <img src="./img/11.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-          <h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
+          <h6 class="card-title"><a href="#">Название фильма</a></h6>
           <p class="card-text">Description of the Film.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+                      </div>
           </div>
       </li>
       <li>
           <div class="card" style="width: 18rem;">
-        <img src="fast.jpg" class="card-img-top" alt="...">
+        <img src="./img/12.jpg" class="card-img-top" alt="...">
           <div class="card-body">
           <h6 class="card-title"><a href="#">Форсаж / The Fast and the Furious</a></h6>
           <p class="card-text">Description of the Film.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+                      </div>
           </div>
       </li>
 		</ul>
